[tool.poetry]
name = "pytest-myplugin"
version = "0.1.0"
description = "Airbyte Pytest Plugin"
authors = ["AJ Steers <aj@airbyte.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.0"

[tool.poetry.plugins.pytest11]
myplugin = "airbyte_connector_tester.pytest_plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
