[tool.poetry]
name = "airbyte-connector-tester"
version = "0.1.0"
description = "Airbyte Connector Tester (ACT) Pytest Plugin"
authors = ["AJ Steers <aj@airbyte.io>", "Airbyte <contact@airbyte.io>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "airbyte_connector_tester" },
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pluggy = "^1.5.0"
importlib-metadata = "^8.5.0"
typing-extensions = "^4.12.2"

# No max version specified, in order to work with connectors on future CDK versions.
# We'll try to keep breaking changes out of the test functions.
airbyte-cdk = ">=5.16.0"

[tool.poetry.plugins.pytest11]
airbyte-connector-tester = "airbyte_connector_tester.plugin"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.pytest.ini_options]
# testpaths = ["tests"]
